--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -19,3 +19,8 @@ body {
     list-style-type: square;
     color: rgb(77, 77, 77);
   }
+
+  .item-lista a{
+      color: rgb(77, 77, 77);
+      text-decoration: none;
+  }
